add: toc to notebook

--- a/informe/hito-1.Rmd
+++ b/informe/hito-1.Rmd
@@ -1,7 +1,10 @@
 ---
 title: "R Notebook"
-author: "******************************* Catalina Carrasco, Javiera Donoso, Joaquín Herrera, Macarena Ríos, Nahuel Sanhueza *******************************"
-output: html_notebook
+author: "**Catalina Carrasco, Javiera Donoso, Joaquín Herrera, Macarena Ríos, Nahuel Sanhueza**"
+output: 
+  html_notebook:
+        toc: yes
+        theme: united
 ---
 # Informe Hito 1
 
