--- a/informe/hito-1.Rmd
+++ b/informe/hito-1.Rmd
@@ -30,7 +30,7 @@ A continuación se estudiará un dataset estructurado sobre esta afección denom
 
 ## Exploración de datos
 
-### Liempieza de datos
+### Limpieza de datos
 
 ### Valores faltantes
 
