--- a/informe/hito-1.Rmd
+++ b/informe/hito-1.Rmd
@@ -346,6 +346,6 @@ ggplot(thyroid.df, aes(x=target, y=age)) +
 ## Preguntas y Problemas
 
 ## Contribución de cada integrante
-Nahuel Sanhueza se encargó de la parte de limpieza de datos y los diagramas de dispersion para atributos numéricos. Catalina Carrasco se encargó de la realización de Bloxplots y tablas covarianza/correlacion lineal. Joaquín Herrera se encargó de realizar el contexto, motivación y características de los datos, cálculo de valores nulos por atributo y totales. Javiera Donoso se encargó de la creación de los histogramas, el proceso de agregacion (promedio valores examenes medicos) agrupando por rango etario y la formulación de preguntas y problemas. Macarena Ríos
+Nahuel Sanhueza se encargó de la parte de limpieza de datos y los diagramas de dispersion para atributos numéricos. Catalina Carrasco se encargó de la realización de Bloxplots y tablas correlacion (Cramer's V, ANOVA test y correlación). Joaquín Herrera se encargó de realizar el contexto, motivación y características de los datos, cálculo de valores nulos por atributo y totales. Javiera Donoso se encargó de la creación de los histogramas, el proceso de agregacion (promedio valores examenes medicos) agrupando por rango etario y la formulación de preguntas y problemas. Macarena Ríos
 
 
